@@ -39,7 +39,7 @@ ENDIF(COMMAND cmake_policy)
 
 SET(EASDIF_VERSION_MAJ 1)
 SET(EASDIF_VERSION_MIN 4)
-SET(EASDIF_VERSION_RELEASE 19)
+SET(EASDIF_VERSION_RELEASE 20)
 SET(EASDIF_VERSION  "${EASDIF_VERSION_MAJ}.${EASDIF_VERSION_MIN}.${EASDIF_VERSION_RELEASE}")
 
 MESSAGE(STATUS "===============================================================")
